# hotwire-gcode-gen

./: README.md  cutpath.py  gcode_mirror.py  geometry.py  machine.toml  main.py  naca_airfoil.py  out.nc  pvinteracive.py  pvtest.py  pyproject.toml  supergee.avl
synergyII/: Deviant Front Mount.stl  README.txt  deviant rear wing mount.stl  synergyII.avl
