[project]
name = "wing-gcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pyvista>=0.44.2",
    "pyvistaqt>=0.11.2",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
]
